# template

./: .gitignore  .ruff.toml  Makefile  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yaml  python-lint.yml
docs/: conf.py  index.rst
src/: main.py
src/config/: config.yaml
src/controllers/: main_controller.py
src/models/: base_model.py
src/utils/: config.py  config.yaml  error_handling.py  exceptions.py  logger_setup.py
src/views/: main_window.py
tests/: test_main.py
