[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
select = ["E", "F", "C", "W", "B"]
ignore = ["E501"]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist"
]

[tool.sphinx]
project = "template"
author = "Your Name"
version = "0.1.0"
release = "0.1.0"
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.napoleon",
    "sphinx.ext.viewcode",
]

[project]
name = "template"
version = "0.1.0"
description = "Eine kurze Beschreibung des Projekts"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "ruff",
    "sphinx",
    "python-dotenv",
    "pytest",
]